--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint src"
   },
   "devDependencies": {
-    "publish-please": "^2.3.1",
+    "publish-please": "^2.3.1"
   },
   "dependencies": {
     "eslint": "^4.2.0"
